--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
 </video>
 
 <div class="w3-animate-right" id="content">
-  <img src="WTLOGO.png" height="80px" width="110px" style="float: right;">
+  <img src="WTLOGO.PNG" height="80px" width="110px" style="float: right;">
   <center><p style="font-size: 25px;letter-spacing: 20px;">Electronic Loan Management System</p></center>
 </div>
 <div class="content2">
@@ -25,7 +25,7 @@
  <div id="id02" class="modal">
   
 <form class="modal-content animate" action="/action_page.php" name="registerForm" onsubmit="return validateForm(name)">
-    <span onclick="window.open('main.html','_self')" class="close" title="Close Modal" style="float: right;padding-right: 10px">&times;</span>
+    <span onclick="window.open('index.html','_self')" class="close" title="Close Modal" style="float: right;padding-right: 10px">&times;</span>
     <div class="container">
     <p align="left">First Name <span style="color: red">*</span></p>
     <input type="firstname" name="firstname" pattern="^[a-zA-Z ]{2,30}$" oninvalid="setCustomValidity('please enter valid name');style='border-color:red;'" oninput="try{setCustomValidity('')}catch(e){};style='border-color:initial;'" required><br>
