--- a/registration.html
+++ b/registration.html
@@ -14,7 +14,7 @@
 </video>
 
 <div class="w3-animate-right" id="content">
-  <img src="WTLOGO.PNG" height="80px" width="110px" style="float: right;">
+  <img src="https://github.com/durgabalareddy/ELOMS/blob/master/WTLOGO.PNG?raw=true" height="80px" width="110px" style="float: right;">
   <center><p style="font-size: 25px;letter-spacing: 20px;">Electronic Loan Management System</p></center>
 </div>
 <div class="content2">
