--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -14,7 +14,7 @@
 </video>
 
 <div class="w3-animate-right" id="content">
-  <img src="WTLOGO.png" height="80px" width="110px" style="float: right;">
+  <img src="https://github.com/durgabalareddy/ELOMS/blob/master/WTLOGO.PNG?raw=true" height="80px" width="110px" style="float: right;">
   <center><p style="font-size: 25px;letter-spacing: 20px;">Electronic Loan Management System</p></center>
 </div>
 <div class="content2">
@@ -25,7 +25,7 @@
  <div id="id01" class="modal">
   
   <form class="modal-content animate" action="/action_page.php">
-    <span onclick="window.open('main.html','_self')" class="close" title="Close Modal" style="float: right;padding-right: 10px">&times;</span>
+    <span onclick="window.open('index.html','_self')" class="close" title="Close Modal" style="float: right;padding-right: 10px">&times;</span>
     <div class="container">
      <p align="left">UserId</p>
   <input type="text" name="id" required><br><br>
