--- a/registration.html
+++ b/registration.html
@@ -62,7 +62,7 @@
 window.onclick = function(event) {
   var modal = document.getElementById('id02');
     if (event.target == modal) {
-        window.open('main.html','_self');
+        window.open('index.html','_self');
     }
 }
 </script>
