--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -41,7 +41,7 @@
 window.onclick = function(event) {
   var modal = document.getElementById('id01');
     if (event.target == modal) {
-        window.open('main.html','_self');
+        window.open('index.html','_self');
     }
 }
 </script>
