--- a/info.html
+++ b/info.html
@@ -63,7 +63,7 @@ img {
 </li>
 </ul>
 <div class="w3-animate-right" id="content" style="position: fixed;background-color: white;">
-<img src="WTLOGO.png" height="80px" width="110px" style="float: right;" onclick="openRightMenu()">
+<img src="https://github.com/durgabalareddy/ELOMS/blob/master/WTLOGO.PNG?raw=true" height="80px" width="110px" style="float: right;" onclick="openRightMenu()">
   <center><p style="font-size: 25px;letter-spacing: 20px;">Electronic Loan Management System</p></center>
 </div>
 <br><br><br><br><br><br><br>
